add empty pause code / interface input (temperature list)

--- a/templates/base.html
+++ b/templates/base.html
@@ -37,7 +37,7 @@
             <br>
             <p>
             <p>Layer numbers <input type = "text" name = "layers" /> ex) 10, 20, 30</p>
-            <p>Materials <input type = "text" name = "materials" /> ex) PLA, TPU, PLA (sequentially) </p>
+            <p>Temperature <input type = "text" name = "temperatures" /> ex) 210, 220, 210 (sequentially) </p>
             <p>Adhesion type <input type="radio" name="options" id="option1" value="blob"> Blob </input>
                 <input type="radio" name="options" id="option2" value="grid"> Grid </input></p>
             </p>
