--- a/templates/base.html
+++ b/templates/base.html
@@ -8,7 +8,7 @@
     <!-- Bootstrap CSS -->
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
 
-    <title>{% block title %} {% endblock %}</title>
+    <title>Multi-ttach</title>
   </head>
   <body>
     <nav class="navbar navbar-expand-md navbar-light bg-light">
@@ -28,7 +28,7 @@
 
     <div class="container">
 
-        {% block content %} {% endblock %}
+        <h2>Multi-ttach</h2>
 
         <hr>
         <h5>1. Vertical adhesion structure (for single-extruder printer) </h5>
