interface using gcodeviewer

--- a/templates/vertical.html
+++ b/templates/vertical.html
@@ -1,10 +1,76 @@
-<!DOCTYPE html>
+<!doctype html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <title>Title</title>
-</head>
-<body>
-something
-</body>
+  <head>
+    <!-- Required meta tags -->
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+
+    <!-- Bootstrap CSS -->
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
+
+    <title>Multi-ttach</title>
+  </head>
+  <body>
+    <nav class="navbar navbar-expand-md navbar-light bg-light">
+        <a class="navbar-brand" href="{{ url_for('index')}}">Multi-ttach</a>
+        <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+            <span class="navbar-toggler-icon"></span>
+        </button>
+        <div class="collapse navbar-collapse" id="navbarNav">
+            <ul class="navbar-nav">
+            <li class="nav-item active">
+                <a class="nav-link" href="{{ url_for('about')}}">About</a>
+            </li>
+            </ul>
+        </div>
+    </nav>
+    <br>
+
+    <div class="container">
+
+        <h1>Multi-ttach</h1>
+
+        <hr>
+        <h5>1. Vertical adhesion structure (for single-extruder printer) </h5>
+        <form action = "uploader_1" method = "POST" enctype = "multipart/form-data">
+         <input type = "file" name = "file" />
+            <br>
+            <p>
+            <p>Layer numbers <input type = "text" name = "layers" /> ex) 10, 20, 30</p>
+            <p>Temperature <input type = "text" name = "temperatures" /> ex) 210, 220, 210 (sequentially) </p>
+            <p>Adhesion type <input type="radio" name="options" id="option1" value="blob"> Blob </input>
+                <input type="radio" name="options" id="option2" value="grid"> Grid </input></p>
+            </p>
+         <input type = "submit"/>
+        </form>
+        <br>
+        <hr>
+        <h5>2. Vertical adhesion structure (for dual-extruder printer) </h5>
+        <form action = "uploader_2" method = "POST" enctype = "multipart/form-data">
+         <input type = "file" name = "file" />
+            <br>
+            <p>
+            <p>Adhesion type <input type="radio" name="options" id="option3" value="blob"> Blob </input>
+                <input type="radio" name="options" id="option4" value="grid"> Grid </input></p>
+            </p>
+         <input type = "submit"/>
+        </form>
+        <br>
+        <hr>
+        <h5>3. Horizontal stitching (for dual-extruder printer) </h5>
+        <form action = "uploader_3" method = "POST" enctype = "multipart/form-data">
+         <input type = "file" name = "file" />
+            <br><br>
+            <input type = "submit"/>
+        </form>
+        <br>
+        <hr>
+    </div>
+
+    <!-- Optional JavaScript -->
+    <!-- jQuery first, then Popper.js, then Bootstrap JS -->
+    <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js" integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1" crossorigin="anonymous"></script>
+    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js" integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous"></script>
+  </body>
 </html>
