--- a/public/templates/base.html
+++ b/public/templates/base.html
@@ -88,12 +88,13 @@
             </ul>
             <ul class="nav pull-right">
                 <li class="dropdown">
-                    <a href="#"
+                    <!--<a href="#"
                        class="dropdown-toggle"
                        data-toggle="dropdown">
                         Spread the word
                         <b class="caret"></b>
                     </a>
+                    -->
                     <ul class="dropdown-menu">
                         <li class="socials">
                             <div class="g-plusone" data-annotation="inline" data-width="150"></div>
@@ -111,30 +112,14 @@
 
 <div id="wrap" class="ui-widget ui-widget-content ui-corner-all">
     <div id="control">
-        <img src="img/logo.png" alt="gCodeViewer - an online gcode viewer"/>
+        <!--<img src="img/logo.png" alt="Multi-ttach"/>-->
 
         <div id="accordion2" class="accordion">
-            <div class="accordion-group">
-                <div class="accordion-heading">
-                    <a class="accordion-toggle" data-toggle="collapse" data-parent="#accordion2" href="#fileAccordionTab">
-                        Select GCode file
-                    </a>
-                </div>
-                <div id="fileAccordionTab" class="accordion-body collapse">
-                    <div class="accordion-inner">
-                        <input type = "file" id = "file0" name = "file" />
 
-                        <!--<form class="add-teacher" id="fAddTeacher" enctype="multipart/form-data" method="post" novalidate="novalidate">-->
-                        <!--<button id="selectFileButton">Select GCode File</button>-->
-                        <!--</form>-->
-                        <div id="drop_zone">Drop file here</div>
-                    </div>
-                </div>
-            </div>
             <div class="accordion-group">
                 <div class="accordion-heading">
                     <a class="accordion-toggle" data-toggle="collapse" data-parent="#accordion2" href="#adhesionTab1">
-                        Vertical adhesion structure (for single-extruder printer)
+                        Vertical adhesion structure (single-extruder)
                     </a>
                 </div>
                 <div id="adhesionTab1" class="accordion-body collapse">
@@ -156,7 +141,7 @@
             <div class="accordion-group">
                 <div class="accordion-heading">
                     <a class="accordion-toggle" data-toggle="collapse" data-parent="#accordion2" href="#adhesionTab2">
-                        Vertical adhesion structure (for dual-extruder printer)
+                        Vertical adhesion structure (dual-extruder)
                     </a>
                 </div>
                 <div id="adhesionTab2" class="accordion-body collapse">
@@ -176,7 +161,7 @@
             <div class="accordion-group">
                 <div class="accordion-heading">
                     <a class="accordion-toggle" data-toggle="collapse" data-parent="#accordion2" href="#adhesionTab3">
-                        Horizontal stitching (for dual-extruder printer)
+                        Horizontal stitching (dual-extruder)
                     </a>
                 </div>
                 <div id="adhesionTab3" class="accordion-body collapse">
@@ -187,6 +172,23 @@
                      <input type = "submit"/>
 
                     </form>
+                    </div>
+                </div>
+            </div>
+            <div class="accordion-group">
+                <div class="accordion-heading">
+                    <a class="accordion-toggle" data-toggle="collapse" data-parent="#accordion2" href="#fileAccordionTab">
+                        Simulate your modified file
+                    </a>
+                </div>
+                <div id="fileAccordionTab" class="accordion-body collapse">
+                    <div class="accordion-inner">
+                        <input type = "file" id = "file0" name = "file" />
+
+                        <!--<form class="add-teacher" id="fAddTeacher" enctype="multipart/form-data" method="post" novalidate="novalidate">-->
+                        <!--<button id="selectFileButton">Select GCode File</button>-->
+                        <!--</form>-->
+                        <!--<div id="drop_zone">Drop file here</div>-->
                     </div>
                 </div>
             </div>
