--- a/templates/base.html
+++ b/templates/base.html
@@ -127,9 +127,9 @@
                     <form action = "uploader_1" method = "POST" enctype = "multipart/form-data">
                      <input type = "file" id = "file1" name = "file" />
 
-                        <p>Layer numbers. ex) 10, 20, 30<input type = "text" name = "layers" /> </p>
+                        <p>Layer numbers. ex) 10, 20, 30<input type = "text" name = "layers" autocomplete="off"/> </p>
 
-                        <p>Temperature. ex) 210, 220, 210<input type = "text" name = "temperatures" />  </p>
+                        <p>Temperature. ex) 210, 220, 210<input type = "text" name = "temperatures" autocomplete="off"/>  </p>
 
 
                         <p>Adhesion type. <input type="radio" name="options" id="option1" value="blob"> Bead </input>
