--- a/templates/base.html
+++ b/templates/base.html
@@ -355,7 +355,7 @@
                 </div>
                 <div class="tab-pane active" id="tabAbout">
                     <div class="aboutpage">
-                        <>h1>Multi-ttach</h1>
+                        <h1>Multi-ttach</h1>
                         <b>Multi-ttach</b> is a tool to modify your G-code, adding adhesion structures for multi-material 3D printing at the interface of the different materials. Based on the type of the joint between the materials, you can choose between the following 3 structures.<br />
 
                         <ul>
